css/main.css
* {
  margin: 0;
  padding: 0;
}

p {
  font-size: 2em;
  line-height: 50px;
  margin-left: 20px;
  color: white;
  font-family: sans-serif;
}

html, body { height: 100%; }

.header {
  width: 100%;
  height: 50px;
  background: rgb(172, 222, 247);
  border-bottom: 3px solid rgb(91, 88, 255);
}

.board {
  width: 100%;
  height: 100%;
  background: rgb(86, 186, 105);
  position: relative;
  overflow: hidden;
}

.tile {
  background-color: beige;
  width: 99px;
  border-radius: 10px;
  border-bottom: 5px solid gray;
  border-right: 5px solid gray;
  position: absolute;
}

.tile:hover {
  background-color: bisque;
}

.selected {
  background-color: lightblue;
}

